--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,6 +132,13 @@ form button:hover {
     
 }
 
+.mess-to-user {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+
 .form {
     display: flex;
     flex-direction: column;
