--- a/templates/index.html
+++ b/templates/index.html
@@ -95,6 +95,7 @@
         </div>
         <!-- <div class="reclama-right"><img src="#" alt="Реклама" /></div> -->
       </section>
+      <h1 class="mess-to-user" >{{req1}}</h1>
       <section class="main-section-down">
         <!-- <div class="reclama-left-down"><img src="#" alt="Реклама" /></div> -->
         <div class="callback conteiner">
@@ -114,7 +115,6 @@
               <button type="reset">Удалить</button>
             </div>
           </form>
-          <h1>{{req1}}</h1>
           <!-- <img src="./img/tmp.py/1.jpg" alt="Картинка" /> -->
         </div>
         <!-- <div class="reclama-right-down"><img src="#" alt="Реклама" /></div> -->
