--- a/templates/admin.html
+++ b/templates/admin.html
@@ -162,7 +162,7 @@
               <form action="/del_messag/" method="POST" class="form-del-mess">
                 <button class="del-mess" name="delete_messag" value="{{item.id}}" type="submit" >Удалить сообщение</button>
               </form>
-              <p>{{item.messag}}</p>
+              <h2>{{item.messag}}</h2>
               <br>
               <br>
               <h3>{{item.name}}</h3>
