--- a/templates/search.html
+++ b/templates/search.html
@@ -83,12 +83,12 @@
           Адрес компании, номер телефона и еще что то (краткая информация о
           компании)
         </p>
-        <div class="logo">
-          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>
-          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>
-          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>
-          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>
-        </div>
+<!--        <div class="logo">-->
+<!--          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>-->
+<!--          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>-->
+<!--          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>-->
+<!--          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>-->
+<!--        </div>-->
       </section>
     </footer>
     <script src="./found.js"></script>
