--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,9 @@
 }
 body {
     scroll-behavior: smooth;
-    background: linear-gradient(rgba(96, 96, 202, 0.7), white)
+    /*background: linear-gradient(rgba(96, 96, 202, 0.7), white)*/
+    background-image: url(../img/fon.jpg);
+    background-size: cover;
 }
 
 img {
@@ -17,6 +19,10 @@ img {
 .conteiner {
     max-width: 80vw;
     margin: 0 auto;
+}
+
+button {
+    cursor: pointer;
 }
 
 .header {
@@ -59,7 +65,9 @@ img {
 	box-shadow: 0 10px 10px -10px #777373 inset;
 }
 
-
+.content__title {
+    font-size: 40px;
+}
 
 .mine-section {
     margin-bottom: 95px;
@@ -93,13 +101,18 @@ form button:hover {
 
 }
 
+.right-text {
+    text-align: right;
+}
+
 .content img {
+display: none;
     max-width: 600px;
     /*height: 100%;*/
 }
 
 .content-text h1{
-    max-width: 566px;
+    width: 80vw;
     margin-bottom: 20px;
 }
 
