--- a/templates/index.html
+++ b/templates/index.html
@@ -63,33 +63,14 @@
         <!-- <div class="reclama-left"><img src="#" alt="Реклама" /></div> -->
         <div class="content conteiner">
           <div class="content-text">
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
-              dolores facilis vero ipsum pariatur nihil sed aut, velit vitae
-              ipsam ex obcaecati nulla optio neque provident iste quam alias
-              nostrum, voluptatem nam distinctio? Quibusdam quaerat amet omnis
-              est alias beatae voluptatum? Itaque iure dolor animi inventore
-              dolore! Voluptate quo eius a corrupti quibusdam quas, sequi
-              accusamus excepturi voluptatem iusto tempora. Explicabo est
-              tempore cumque vel autem molestiae architecto dolorum officia cum
-              totam accusamus illo soluta et eligendi doloremque aut, minima
-              atque eveniet! At id alias laudantium totam voluptatibus. Sit
-              impedit ratione quam, aliquid molestiae, nesciunt ut ullam est
-              nihil, et amet doloribus? Sint architecto blanditiis debitis
-              perferendis voluptas rem facere facilis impedit dolores inventore
-              deleniti animi illo ad sequi pariatur doloribus beatae dolorum
-              quaerat adipisci, quisquam eos ab vitae dolore qui. Ducimus,
-              itaque at vel provident corporis aspernatur dicta eveniet quia
-              tenetur eaque dignissimos eligendi? Quasi hic suscipit, delectus
-              explicabo unde quisquam, eligendi exercitationem, voluptates eum
-              totam reprehenderit? Tempora ducimus voluptates sint deserunt enim
-              repudiandae non, at inventore! Ducimus, laboriosam sapiente itaque
-              quas magni est voluptates rem beatae sunt placeat excepturi atque
-              iste voluptate reprehenderit deserunt nobis laborum sit architecto
-              nemo laudantium nam rerum. Porro at eligendi assumenda
-              exercitationem atque?
-            </p>
+            <h1 class="content__title" >Информационно-аналитический портал дезинфицирующих средств</h1>
+            <h1 class="content__title" >Инструкции в свободном доступе</h1>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1 class="right-text" >"Найдите потребность и восполните её"</h1>
+            <h1 class="right-text" >Рут-Стаффорд Пил</h1>
           </div>
           <img src="{{url_for('static', filename='img/tmp/16.png')}}" alt="Картинка" />
         </div>
@@ -100,15 +81,15 @@
         <!-- <div class="reclama-left-down"><img src="#" alt="Реклама" /></div> -->
         <div class="callback conteiner">
           <form method="POST" class="form" id="callback" action="{{ url_for('send_messag')}}">
-            <input name="name" class="input" type="text" placeholder="Enter your name" />
-            <input name="email" class="input" type="email" placeholder="Enter your email" />
+            <input name="name" class="input" type="text" placeholder="Ваше имя" />
+            <input name="email" class="input" type="email" placeholder="Ваш адрес электронной почты" />
             <textarea
               name="massag"
               class="input masseg"
               id=""
               cols="30"
               rows="10"
-              placeholder="Your message..."
+              placeholder="Ваше сообщение...  (не более 200 символов)"
             ></textarea>
             <div class="btn-callback">
               <button type="submit">Отправить</button>
@@ -126,12 +107,12 @@
           Адрес компании, номер телефона и еще что то (краткая информация о
           компании)
         </p>
-        <div class="logo">
-          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>
-          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>
-          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>
-          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>
-        </div>
+<!--        <div class="logo">-->
+<!--          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>-->
+<!--          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>-->
+<!--          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>-->
+<!--          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>-->
+<!--        </div>-->
       </div>
     </footer>
   </body>
