--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
             <h1 class="right-text" >"Найдите потребность и восполните её"</h1>
             <h1 class="right-text" >Рут-Стаффорд Пил</h1>
           </div>
-          <img src="{{url_for('static', filename='img/tmp/16.png')}}" alt="Картинка" />
+<!--          <img src="{{url_for('static', filename='img/tmp/16.png')}}" alt="Картинка" />-->
         </div>
         <!-- <div class="reclama-right"><img src="#" alt="Реклама" /></div> -->
       </section>
