Изменил макс кол-во допустимых символов на 1000 в сообщении

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -214,8 +214,12 @@ form button:hover {
         flex-direction: column;
     }
 
+    .main {
+    background-image: none;
+    }
+
     .content-text {
-        background-image: url(../img/tmp/16.png);
+        background-image: url(../img/tmp/10.png);
         background-size: 100% 100%;
     }
 
