--- a/static/css/autorysit.css
+++ b/static/css/autorysit.css
@@ -6,9 +6,11 @@
     text-decoration: none;
 }
 body {
+    background-image: url(../img/fon2.jpg);
+    background-size: cover;
     font-family: 'Lato', sans-serif;
     scroll-behavior: smooth;
-    background: linear-gradient(rgba(96, 96, 202, 0.7), white)
+    /*background: linear-gradient(rgba(96, 96, 202, 0.7), white)*/
     /*background-image: url(../img/fon.jpg);
     background-size: cover;*/
 }
@@ -46,6 +48,18 @@ button {
     align-items: center;
     gap: 40px;
     margin-bottom: 10px;
+}
+
+.logo-comp img {
+    max-height: 60px;
+}
+
+
+.logo-comp img:hover {
+    /*border: 2px solid black;
+    border-radius: 15px;
+    */
+    max-height: 65px;
 }
 
 .navigation svg:hover {
