--- a/static/css/search.css
+++ b/static/css/search.css
@@ -7,9 +7,11 @@
     text-decoration: none;
 }
 body {
+    background-image: url(../img/fon2.jpg);
+    background-size: cover;
     font-family: 'Lato', sans-serif;
     scroll-behavior: smooth;
-    background: linear-gradient(rgba(96, 96, 202, 0.7), white);
+    /*background: linear-gradient(rgba(96, 96, 202, 0.7), white);*/
     /*background-image: url(../img/fon.jpg);
     background-size: cover;*/
 }
@@ -51,6 +53,18 @@ button {
 .navigation img {
     width: 26px;
     height: 27px;
+}
+
+.logo-comp img {
+    max-height: 60px;
+}
+
+
+.logo-comp img:hover {
+    /*border: 2px solid black;
+    border-radius: 15px;
+    */
+    max-height: 65px;
 }
 
 .navigation svg:hover {
