--- a/templates/admin.html
+++ b/templates/admin.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <section class="headering conteiner">
-        <a class="logo-comp" href="#"><img src="#" alt="логотип компании" /></a>
+        <a class="logo-comp" href="/"><img src="../static/img/bib.png" alt="логотип компании" /></a>
         <nav class="navigation">
           <a href="/"
             ><svg
