--- a/templates/search.html
+++ b/templates/search.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <section class="headering conteiner">
-        <a class="logo-comp" href="#"><img src="#" alt="логотип компании" /></a>
+        <a class="logo-comp" href="/"><img src="../static/img/bib.png" alt="логотип компании" /></a>
         <nav class="navigation">
           <a href="/autorysit">
             <svg width="26px" height="27px" viewBox="0 0 48 48">
