--- a/templates/autorysit.html
+++ b/templates/autorysit.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <section class="headering conteiner">
-        <a class="logo-comp" href="/"><img src="../static/img/bib.png" alt="логотип компании" /></a>
+        <a class="logo-comp" href="/"><img src="../static/img/logo.png" alt="логотип компании" /></a>
         <nav class="navigation">
           <a href="/search"
             ><svg
@@ -59,15 +59,14 @@
     <footer class="footer">
       <section class="footering conteiner">
         <p>
-          Адрес компании, номер телефона и еще что то (краткая информация о
-          компании)
         </p>
-        <div class="logo">
-          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>
-          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>
-          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>
-          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>
-        </div>
+        <p>&copy; БиблиоДез</p>
+<!--        <div class="logo">-->
+<!--          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>-->
+<!--          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>-->
+<!--          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>-->
+<!--          <a href="#"><img src="#" alt="Логотип кампании-партнера" /></a>-->
+<!--        </div>-->
       </section>
     </footer>
   </body>
