--- a/static/css/autorysit.css
+++ b/static/css/autorysit.css
@@ -52,6 +52,7 @@ button {
 
 .logo-comp img {
     max-height: 60px;
+    margin-bottom: 10px;
 }
 
 
@@ -88,6 +89,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 60vh;
 }
 
 .autorisit {
@@ -132,7 +134,7 @@ form button:hover {
 
 
 .footer {
-    padding: 40px 0;
+    padding: 10px 0;
     background: linear-gradient(white, rgb(102, 94, 94));
 }
 
