--- a/static/css/search.css
+++ b/static/css/search.css
@@ -36,6 +36,16 @@ button {
     padding: 40px;
 }
 
+
+.no-see {
+    display: none;
+}
+
+.name-page {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 .headering {
     display: flex;
     justify-content: space-between;
@@ -57,6 +67,7 @@ button {
 
 .logo-comp img {
     max-height: 60px;
+    margin-bottom: 10px
 }
 
 
@@ -72,8 +83,12 @@ button {
 }
 
 .headering a {
-    color: white;
+    color: black;
     font-size: 20px;
+}
+
+.headering a h1:hover {
+    color: #dfd3d3;
 }
 
 .hr-shadow {
@@ -237,7 +252,7 @@ form button:hover {
 }
 
 .footer {
-    padding: 40px 0;
+    padding: 10px 0;
     background: linear-gradient(white, rgb(102, 94, 94));
 }
 
