--- a/static/css/search.css
+++ b/static/css/search.css
@@ -23,7 +23,7 @@ img {
 }
 
 .conteiner {
-    max-width: 80vw;
+    max-width: 85vw;
     margin: 0 auto;
 }
 
@@ -101,12 +101,12 @@ button {
 .search {
     display: flex;
     gap: 10px;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
     justify-content: center;
     align-items: center;
 }
 
-form {
+.form-search {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -120,14 +120,6 @@ form {
     font-size: 30px;
 }
 
-
-.form input {
-    width: 100%;
-    min-height: 40px;
-    border-radius: 10px;
-    font-size: 30px;
-}
-
 form button {
     min-height: 25px;
     padding: 5px;
@@ -136,19 +128,22 @@ form button {
     box-shadow: none;
 }
 
+input::placeholder {
+    text-align: center;
+    font-size: 25px;
+}
+
+
+.form input {
+    width: 100%;
+    min-height: 40px;
+    border-radius: 10px;
+    font-size: 30px;
+}
+
 form button:hover {
     background-color: rgb(52, 77, 77);
     color: #dfd3d3;
-}
-
-.faund {
-    margin-bottom: 3px;
-}
-
-.search input::placeholder{
-    font-size: 20px;
-    text-align: center;
-    word-wrap: wrap;
 }
 
 .search h1 {
@@ -204,6 +199,34 @@ form button:hover {
     margin-bottom: 40px;
 }
 
+.chose {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+.alf {
+    border-radius: 7px;
+    border-top: 2px solid #dfd3d3;
+    border-bottom: 2px solid #dfd3d3;
+	box-shadow: 0 10px 10px -10px #777373 inset;
+    text-align: center;
+}
+
+.chose button {
+    background: none;
+    border: none;
+    font-weight: 900;
+    font-size: 18px;
+    border-radius: 7px;
+}
+
+.chose button:hover {
+    background-color: rgb(52, 77, 77);
+    color: #dfd3d3;
+}
+
 .main-section-down {
     display: flex;
     justify-content: space-between;
@@ -221,35 +244,6 @@ form button:hover {
     border: 2px solid #1d1818;
 }
 */
-.callback {
-    min-width: 800px;
-    /*display: flex;
-    justify-content: space-around;*/
-    
-}
-
-.form {
-    display: flex;
-    flex-direction: column;
-    padding: 10px 10px;
-    border: 2px solid black;
-    border-radius: 15px;
-    box-shadow: 3px 3px 5px black
-}
-
-.input {
-    margin-bottom: 15px;
-}
-
-.masseg {
-    width: 100%;
-    min-height: 100px;
-}
-
-.btn-callback  button {
-    border-radius: 5px;
-    padding: 5px;
-}
 
 .footer {
     padding: 10px 0;
@@ -282,6 +276,15 @@ form button:hover {
         flex-direction: column;
     }
 
+    .name-page {
+        font-size: 20px;
+    }
+
+    .chose button {
+        font-weight: 900;
+        font-size: 15px;
+    }
+
     .content-text {
         background-image: url(../img/tmp/16.png);
         background-size: 100% 100%;
@@ -291,33 +294,47 @@ form button:hover {
         min-width: 768px;
     }
 
-    form {
-        flex-direction: column;
-    }
-
-    .search {
-        flex-direction: column;
-    }
-
-    .search form input {
-        min-width: 90vw;
+    input::placeholder {
+        font-size: 18px;
     }
    
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
     .conteiner {
-        width: 95wh;
+        min-width: 90vw;
     }
 
-    .content img {
-        display: none;
+    .header {
+        padding: 0;
     }
 
-    .headering {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    .name-page {
+        font-size: 15px;
+    }
+
+    .chose button {
+        font-weight: 900;
+        font-size: 10px;
+    }
+
+    input::placeholder {
+        font-size: 10px;
+    }
+
+    form {
+        gap: 0;
+    }
+    
+    .form-search input {
+        min-height: 20px;
+        font-size: 20px;
+    }
+    
+    form button {
+        min-height: 15px;
+        border-radius: 10px;
+        font-size: 10px;
     }
 
     .headering {
@@ -325,12 +342,6 @@ form button:hover {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 15px;
-    }
-
-    .header {
-        padding: 20px;
-        margin-bottom: 30px;
     }
 
     .navigation {
@@ -338,40 +349,10 @@ form button:hover {
         min-width: 100%;
     }
 
-    .masseg {
-        min-width: 250px;
-        min-height: 100px;
-    }
-
-    .callback {
-        min-width: 320px;
-    }
-
-    .search {
-        flex-direction: column;
-        margin-bottom: 40px;
-    }
-
-    .search input::placeholder{
-        font-size: 13px;
-    }
-
-    .cons {
-        display: none;
-    }
-
-    form {
-        flex-direction: column;
-    }
-
-    .search {
-        flex-direction: column;
-    }
-
-    .search form input {
-        min-width: 90vw;
-        font-size: 20px;
-    }
+    .form input {
+    min-height: 30px;
+    font-size: 20px;
+}
 
 }
 
